Bug 1698697 - Fix BlockingResourceBase code with callstack tracking enabled. r=nika

Since GetAcquisitionState is never used independently of
ClearAcquisitionState, we change it to TakeAcquisitionState, such that
we don't require an expensive array copy in this case.

Differential Revision: https://phabricator.services.mozilla.com/D108554