xpcom/threads/BlockingResourceBase.h
@@ -193,12 +193,21 @@ class BlockingResourceBase {
   }  // NS_NEEDS_RESOURCE(this)
 
   /**
-   * GetAcquisitionState
-   * Return whether or not this resource was acquired.
+   * TakeAcquisitionState
+   * Return whether or not this resource was acquired and mark the resource
+   * as not acquired for subsequent uses.
    *
    * *NOT* thread safe.  Requires ownership of underlying resource.
    */
-  AcquisitionState GetAcquisitionState() { return mAcquired; }
+  AcquisitionState TakeAcquisitionState() {
+#  ifdef MOZ_CALLSTACK_DISABLED
+    bool acquired = mAcquired;
+    ClearAcquisitionState();
+    return acquired;
+#  else
+    return mAcquired.take();
+#  endif
+  }
 
   /**
    * SetAcquisitionState
@@ -206,8 +215,8 @@ class BlockingResourceBase {
    *
    * *NOT* thread safe.  Requires ownership of underlying resource.
    */
-  void SetAcquisitionState(const AcquisitionState& aAcquisitionState) {
-    mAcquired = aAcquisitionState;
+  void SetAcquisitionState(AcquisitionState&& aAcquisitionState) {
+    mAcquired = std::move(aAcquisitionState);
   }
 
   /**
